test/trivial/shannon/quit/haltOneArg.good
haltOneArg.chpl:7: error: halt reached - x != y
