test/trivial/shannon/quit/haltOneArg.chpl
var x : int = 13;
var y : float   = 99.9;

if (x == y) {
   writeln("x is equal to y.");
} else {
  halt("x != y");
}
